Tons of tiny modifications,  tyre bar line and so on

--- a/SimTECH/SimTECH/Components/DriverPosition.razor
+++ b/SimTECH/SimTECH/Components/DriverPosition.razor
@@ -14,7 +14,8 @@
     {
         get
         {
-            return $"color:{Colour}; text-shadow: 2px 1px 2px {Accent}";
+            //var shadowEffect = $"color:{Colour}; text-shadow: 2px 1px 2px {Accent}";
+            return string.Empty;
         }
     }
 }
