--- a/SimTECH/SimTECH/Components/MudTdResult.razor
+++ b/SimTECH/SimTECH/Components/MudTdResult.razor
@@ -1,13 +1,13 @@
 ﻿<MudTd Class="result-cell" Style="@_cellStyles">
-    <MudText Typo="@Typo">
+    <MudText Typo="@Typo" Color="Color.Inherit">
         @_resultDisplay
         @if (_hasPole)
         {
-            <sup>P</sup>
+            <sup style="font-size: 0.7rem">P</sup>
         }
         @if (_hasFastestLap)
         {
-            <sup>F</sup>
+            <sup style="font-size: 0.7rem">F</sup>
         }
     </MudText>
 </MudTd>
