--- a/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
@@ -23,8 +23,8 @@
                 <PropertyColumn Property="e => e.TeamName" Title="Team" CellStyleFunc="@SimpleCellStyle" />
                 <PropertyColumn Property="e => e.Engine" Title="Engine" />
                 <PropertyColumn Property="e => e!.Manufacturer" />
-                <PropertyColumn Property="e => e!.QualyPower" Title="Q.PWR" />
-                <PropertyColumn Property="e => e!.RacePower" Title="R.PWR" />
+                <PropertyColumn Property="e => e!.QualyPower" Title="Q.PWR" CellClass="font-caption" />
+                <PropertyColumn Property="e => e!.RacePower" Title="R.PWR" CellClass="font-caption" />
                 <TemplateColumn T="PowerRankModel" Title="A/C/P" Sortable="false">
                     <CellTemplate>
                         <MudText Typo="Typo.caption">@context.Item.Aero / @context.Item.Chassis / @context.Item.Powertrain</MudText>
