--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -156,7 +156,7 @@
                             }
                         }
                         <MudTd>
-                            <MudText Typo="Typo.caption">@context.Average</MudText>
+                            <MudText Typo="Typo.caption">@context.Average.ToString("F1")</MudText>
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
@@ -227,7 +227,7 @@
                         </MudTd>
                     }
                     <MudTd>
-                        <MudText Typo="Typo.caption">@context.Average</MudText>
+                        <MudText Typo="Typo.caption">@context.Average.ToString("F1")</MudText>
                     </MudTd>
                 </RowTemplate>
             </MudTable>
