--- a/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
@@ -72,7 +72,14 @@
                 <MudText Typo="Typo.caption" Color="Color.Inherit">@context.MaxScoreQ1</MudText>
             </MudTd>
             <MudTd>
-                <MudText>+@(context.GapQ1)</MudText>
+                @if (context.Position == 1)
+                {
+                    <MudText Typo="Typo.button">LEADER</MudText>
+                }
+                else
+                {
+                    <MudText Typo="Typo.caption">+@(context.GapQ1)</MudText>
+                }
             </MudTd>
         </RowTemplate>
     </MudTable>
@@ -105,11 +112,9 @@
         var positionIndex = 0;
 
         foreach (var driver in Model.QualifyingDrivers)
-        {
             driver.RunValuesQ1[advanced] = driver.GetQualifyingResult(Model.QualyRng);
-        }
 
-        lowestScore = Model.QualifyingDrivers.SelectMany(e => e.RunValuesQ1).Min();
+        lowestScore = Model.QualifyingDrivers.SelectMany(e => e.RunValuesQ1).Where(e => e > 0).Min();
         highestScore = Model.QualifyingDrivers.SelectMany(e => e.RunValuesQ1).Max();
         worstScoresPerSession[advanced] = lowestScore;
         bestScoresPerSession[advanced] = highestScore;
@@ -118,7 +123,11 @@
         {
             driver.Position = ++positionIndex;
             driver.PositionQ1 = positionIndex;
-            driver.GapQ1 = Math.Round(((highestScore - driver.MaxScoreQ1) * gapMarge), 2);
+
+            if (driver.Position == 1)
+                driver.GapQ1 = Math.Round(((highestScore - driver.MaxScoreQ1) * gapMarge), 2);
+            else
+                driver.GapQ1 = Math.Round(((highestScore - driver.MaxScoreQ1) * gapMarge), 2);
         }
 
         advanced++;
