--- a/SimTECH/SimTECH/Components/SignalIcon.razor
+++ b/SimTECH/SimTECH/Components/SignalIcon.razor
@@ -37,7 +37,7 @@
                 case "Caution":
                     return IconCollection.AlertTriangle;
                 case "Death":
-                    return IconCollection.Skull;
+                    return IconCollection.Bandage;
                 default:
                     return Icons.Material.Filled.QuestionMark;
             }
