--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -51,7 +51,11 @@
                                 }
                                 else
                                 {
-                                    <MudText>Think for a second, if there is a next race then the season is active. This season isn't so there is no next race, bellend.</MudText>
+                                    <MudText>
+                                        Think for ONE second, if there is a next race then the season is active.<br />
+                                        This season right now is NOT active so there is no next race.<br/>
+                                        Bellend.
+                                    </MudText>
                                 }
                             </MudPaper>
                         </MudItem>
