--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -298,8 +298,8 @@
                 Name = driver.Driver.FullName,
                 Number = driver.Number,
                 Nationality = driver.Driver.Country,
-                Colour = driverTeam?.Colour ?? "var(--mud-palette-secondary)",
-                Accent = driverTeam?.Accent ?? "var(--mud-palette-secondary-text)",
+                Colour = driverTeam?.Colour ?? "var(--mud-palette-primary)",
+                Accent = driverTeam?.Accent ?? "var(--mud-palette-primary-text)",
                 Points = driver.Points,
                 HiddenPoints = driver.HiddenPoints,
                 SeasonTeamId = driver.SeasonTeamId,
